- Added an "org.jasypt.util.password.rfc2307" package containing utility classes for
  password encryption operations according to common LDAP schemes like {MD5},
  {SHA}, {SMD5} and {SSHA}.
- Rebuilt CLI scripts: now both Windows and Linux versions can be run from outside
  the "bin" folder. New configuration parameters added.
- Rebuilt zip distribution package: remove unneeded "cli-bundle" and added icu4j 
  to libs.


1.6
===
- Modified Class.forName calls to use current thread's context classloader.
- Fixed JavaDoc for Spring Security -related classes.
- Added missing registerPBE*Encryptor methods in HibernatePBEEncryptorRegistry
- Added compatibility with Spring Framework 3.0.x and Spring Security 3.0.x
- Tested compatibility with Apache Wicket 1.4.x and Hibernate 3.2.x

1.5
===
- Dependency on ICU4j made optional in Java 6 environments.
- Created new versions of old ACEGI's PasswordEncoder and PBEPasswordEncoder
  for Spring Security 2.x in package org.jasypt.spring.security2.
- Random number generation algorithm can now be specified in RandomSaltGenerator.
- Fixed bug in .sh files in the bin folder. $@ did not work with inputs that
  contained spaces and had to be substituted by "$@".

1.4.1
=======
- Fixed bug in EncryptedPasswordC3P0ConnectionProvider which made decryption
  of datasource configuration not to work properly.

1.4
=======
- Added methods to Simple* and Environment* config classes for both Digesters 
  and PBEEncryptors to allow them to be configured entirely with Strings.
- Added to org.jasypt.encryption.pbe.StandardPBEByteEncryptor a workaround
  for Sun JCE's bug 4953555 (http://bugs.sun.com/view_bug.do?bug_id=4953555)   
- Added org.jasypt.properties.EncryptableProperties as a java.util.Properties
  which allows transparent decryption of encrypted property values.
- Moved org.jasypt.hibernate.ParameterNaming to 
  org.jasypt.hibernate.type.ParameterNaming.