@@ -23,5 +23,4 @@ then
   JAVA_EXECUTABLE=$JAVA_HOME/bin/java
 fi
 
-echo USING CLASSPATH: $EXEC_CLASSPATH
 $JAVA_EXECUTABLE -classpath $EXEC_CLASSPATH $EXECUTABLE_CLASS $SCRIPT_NAME "$@"
